--- a/examples/flash/Cargo.toml
+++ b/examples/flash/Cargo.toml
@@ -22,7 +22,7 @@ defmt = "0.1.0"
 defmt-rtt = "0.1.0"
 panic-probe = "0.1.0"
 nrf52840-hal    = { version = "0.11.0" }
-nrf-softdevice = { version = "0.1.0", path = "../../nrf-softdevice" }
+nrf-softdevice = { version = "0.1.0", path = "../../nrf-softdevice", features = ["defmt-trace"] }
 static-executor  = { version = "0.1.0" }
 static-executor-cortex-m  = { version = "0.1.0" }
 
