--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -15,14 +15,14 @@ defmt-warn = []
 defmt-error = []
 
 [dependencies]
-async-flash = { version = "0.1.0", path = "../../async-flash" }
+async-flash = { version = "0.1.0", path = "../async-flash" }
 cortex-m        = { version = "0.6.3", features = [ "inline-asm" ] }
 cortex-m-rt = "0.6.12"
 defmt = "0.1.0"
 defmt-rtt = "0.1.0"
 panic-probe = "0.1.0"
 nrf52840-hal    = { version = "0.11.0" }
-nrf-softdevice = { version = "0.1.0", path = "../../nrf-softdevice", features = ["defmt-trace"] }
+nrf-softdevice = { version = "0.1.0", path = "../nrf-softdevice", features = ["defmt-trace"] }
 static-executor  = { version = "0.1.0" }
 static-executor-cortex-m  = { version = "0.1.0" }
 
