--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
 authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
 edition = "2018"
-readme = "README.md"
-name = "softdevice-test"
+name = "nrf-softdevice-examples"
 version = "0.1.0"
 
 [features]
@@ -27,8 +26,3 @@ nrf-softdevice-s140 = { version = "0.1.1", path = "../nrf-softdevice-s140" }
 static-executor  = { version = "0.1.0" }
 static-executor-cortex-m  = { version = "0.1.0" }
 futures = { version = "0.3.5", default-features = false }
-
-[[bin]]
-name = "softdevice-test"
-test = false
-bench = false
