--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -23,6 +23,6 @@ panic-probe = "0.1.0"
 nrf52840-hal    = { version = "0.11.0" }
 nrf-softdevice = { version = "0.1.0", path = "../nrf-softdevice", features = ["defmt-trace"] }
 nrf-softdevice-s140 = { version = "0.1.1", path = "../nrf-softdevice-s140" }
-static-executor  = { version = "0.1.0" }
+static-executor  = { version = "0.1.0", features=["defmt"]}
 static-executor-cortex-m  = { version = "0.1.0" }
 futures = { version = "0.3.5", default-features = false }
