--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -21,7 +21,7 @@ defmt = "0.1.0"
 defmt-rtt = "0.1.0"
 panic-probe = "0.1.0"
 nrf52840-hal    = { version = "0.11.0" }
-nrf-softdevice = { version = "0.1.0", path = "../nrf-softdevice", features = ["defmt-trace"] }
+nrf-softdevice = { version = "0.1.0", path = "../nrf-softdevice", features = ["defmt-trace", "nrf52840", "s140", "ble-peripheral", "ble-central"] }
 nrf-softdevice-s140 = { version = "0.1.1", path = "../nrf-softdevice-s140" }
 static-executor  = { version = "0.1.0", features=["defmt"]}
 static-executor-cortex-m  = { version = "0.1.0" }
