--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -15,7 +15,7 @@ defmt-error = []
 
 [dependencies]
 async-flash = { version = "0.1.0", path = "../async-flash" }
-cortex-m        = { version = "0.6.3", features = [ "inline-asm" ] }
+cortex-m        = { version = "0.6.3" }
 cortex-m-rt = "0.6.12"
 defmt = "0.1.0"
 defmt-rtt = "0.1.0"
