--- a/nrf-softdevice/Cargo.toml
+++ b/nrf-softdevice/Cargo.toml
@@ -46,3 +46,7 @@ nrf-softdevice-s113 = { version = "0.1.1", path = "../nrf-softdevice-s113", opti
 nrf-softdevice-s122 = { version = "0.1.1", path = "../nrf-softdevice-s122", optional = true }
 nrf-softdevice-s132 = { version = "0.1.1", path = "../nrf-softdevice-s132", optional = true }
 nrf-softdevice-s140 = { version = "0.1.1", path = "../nrf-softdevice-s140", optional = true }
+
+[package.metadata.docs.rs]
+targets = ["thumbv7em-none-eabihf"]
+features = ["nrf52840", "s140", "ble-central", "ble-peripheral", "ble-l2cap"]
