--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -23,7 +23,8 @@ ble-gatt-server = ["nrf-softdevice/ble-gatt-server"]
 ble-gatt-client = ["nrf-softdevice/ble-gatt-client"]
 
 [dependencies]
-async-flash = { version = "0.1.0", path = "../async-flash" }
+embassy = { version = "0.1.0" }
+embassy-nrf = { version = "0.1.0", features = [ "52840" ]}
 cortex-m        = { version = "0.6.3" }
 cortex-m-rt = "0.6.12"
 cortex-m-rtic = { version = "0.5.5", optional = true }
@@ -33,8 +34,6 @@ panic-probe = "0.1.0"
 nrf52840-hal    = { version = "0.11.0" }
 nrf-softdevice = { version = "0.1.0", path = "../nrf-softdevice", features = ["defmt-trace", "nrf52840", "s140", "ble-peripheral", "ble-central"] }
 nrf-softdevice-s140 = { version = "0.1.1", path = "../nrf-softdevice-s140" }
-static-executor  = { version = "0.1.0", features=["defmt"]}
-static-executor-cortex-m  = { version = "0.1.0" }
 futures = { version = "0.3.5", default-features = false }
 fixed = "1.2.0"
 
