update examples to anyfmt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,7 @@
+cargo-features = ["resolver"]
 
 [workspace]
+resolver = "2"
 members = [
     "nrf-softdevice",
     "nrf-softdevice-mbr",
@@ -21,6 +23,7 @@ exclude = [
 panic-probe = { git = "https://github.com/knurling-rs/probe-run", branch="main" }
 defmt-rtt = { git = "https://github.com/knurling-rs/defmt", branch="main" }
 defmt = { git = "https://github.com/knurling-rs/defmt", branch="main" }
+anyfmt = { git = "https://github.com/akiles/embassy" }
 embassy = { git = "https://github.com/akiles/embassy" }
 embassy-nrf = { git = "https://github.com/akiles/embassy" }
 embassy-macros = { git = "https://github.com/akiles/embassy" }
