Properly handle future drops. Add on/off example showcasing it.

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -52,6 +52,10 @@ name = "ble_bas_central"
 required-features = ["ble-gatt-client"]
 
 [[bin]]
+name = "ble_peripheral_onoff"
+required-features = ["ble-gatt-server"]
+
+[[bin]]
 name = "flash"
 required-features = []
 
