Update to defmt panic/assert/unwrap macros

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -23,14 +23,13 @@ ble-gatt-server = ["nrf-softdevice/ble-gatt-server"]
 ble-gatt-client = ["nrf-softdevice/ble-gatt-client"]
 
 [dependencies]
-anyfmt = {version = "0.1.0", features = ["defmt"] }
 embassy = { version = "0.1.0", features = ["defmt"]}
 embassy-nrf = { version = "0.1.0", features = [ "defmt", "52840" ]}
 cortex-m        = { version = "0.6.4" }
 cortex-m-rt = "0.6.13"
 cortex-m-rtic = { version = "0.5.5", optional = true }
 defmt = "0.1.0"
-defmt-rtt = "0.1.0"
+nrf-softdevice-defmt-rtt = { path = "../nrf-softdevice-defmt-rtt", version = "0.1.0" }
 panic-probe = "0.1.0"
 nrf52840-hal    = { version = "0.11.0" }
 nrf-softdevice = { version = "0.1.0", path = "../nrf-softdevice", features = ["defmt-trace", "nrf52840", "s140", "ble-peripheral", "ble-central"] }
