--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -36,6 +36,8 @@ nrf-softdevice = { version = "0.1.0", path = "../nrf-softdevice", features = ["d
 nrf-softdevice-s140 = { version = "0.1.1", path = "../nrf-softdevice-s140" }
 futures = { version = "0.3.5", default-features = false }
 fixed = "1.2.0"
+heapless = "0.5.6"
+alloc-cortex-m = "0.4.0"
 
 
 [[bin]]
