--- a/nrf-softdevice/Cargo.toml
+++ b/nrf-softdevice/Cargo.toml
@@ -31,12 +31,14 @@ ble-gatt-server = []
 ble-gatt-client = []
 
 [dependencies]
+defmt = { version = "0.1.3", optional = true }
+log = { version = "0.4.11", optional = true }
+
 num_enum = { version = "0.5.1", default-features = false }
 embassy = { version = "0.1.0", git = "https://github.com/akiles/embassy" }
 cortex-m = "0.6.4"
 cortex-m-rt = "0.6.13"
 heapless = "0.5.6"
-defmt = "0.1.3"
 fixed = "1.5.0"
 
 nrf52810-pac  = { version = "0.9.0", features = ["rt"], optional = true }
