Smooth the getting started
Some changes to the README given guidance. Also, a benign addition to the VS Code settings to stop CMake from being annoying in the case where it is installed.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
     "**/.git/objects/**": true,
     "**/.git/subtree-cache/**": true,
     "**/target/**": true,
-  }
+  },
+  "cmake.configureOnOpen": false
 }
