--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -24,6 +24,7 @@ ble-gatt-client = ["nrf-softdevice/ble-gatt-client"]
 
 [dependencies]
 embassy = { version = "0.1.0", features = ["defmt"]}
+embassy-traits = { version = "0.1.0", features = ["defmt"]}
 embassy-nrf = { version = "0.1.0", features = [ "defmt", "52840" ]}
 cortex-m        = { version = "0.6.4" }
 cortex-m-rt = "0.6.13"
