fix: Update to track upstream embassy-nrf
Gpiote example needs more work.

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -53,9 +53,9 @@ required-features = ["ble-gatt-server"]
 name = "ble_bas_central"
 required-features = ["ble-gatt-client"]
 
-[[bin]]
-name = "ble_peripheral_onoff"
-required-features = ["ble-gatt-server"]
+#[[bin]]
+#name = "ble_peripheral_onoff"
+#required-features = ["ble-gatt-server"]
 
 [[bin]]
 name = "flash"
