--- a/nrf-softdevice-defmt-rtt/Cargo.toml
+++ b/nrf-softdevice-defmt-rtt/Cargo.toml
@@ -14,3 +14,4 @@ version = "0.1.0"
 defmt = { version = "0.2.0" }
 nrf-softdevice = { path = "../nrf-softdevice", version = "0.1.0" }
 cortex-m = "0.6.4"
+critical-section = { version = "0.1.0" }
