--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -28,22 +28,15 @@ embassy-traits = { version = "0.1.0", features = ["defmt"]}
 embassy-nrf = { version = "0.1.0", features = [ "defmt", "52840" ]}
 cortex-m        = { version = "0.6.4" }
 cortex-m-rt = "0.6.13"
-cortex-m-rtic = { version = "0.5.5", optional = true }
 defmt = { version = "0.2.0", features = ["alloc"] }
 nrf-softdevice-defmt-rtt = { path = "../nrf-softdevice-defmt-rtt", version = "0.1.0" }
 panic-probe = "0.1.0"
-nrf52840-hal    = { version = "0.12.0" }
-nrf-softdevice = { version = "0.1.0", path = "../nrf-softdevice", features = ["defmt", "defmt-trace", "nrf52840", "s140", "ble-peripheral", "ble-central"] }
+nrf-softdevice = { version = "0.1.0", path = "../nrf-softdevice", features = ["defmt", "defmt-trace", "nrf52840", "s140", "ble-peripheral", "ble-central", "critical-section-impl"] }
 nrf-softdevice-s140 = { version = "0.1.1", path = "../nrf-softdevice-s140" }
 futures = { version = "0.3.5", default-features = false }
 fixed = "1.2.0"
 heapless = "0.5.6"
 alloc-cortex-m = "0.4.0"
-
-
-[[bin]]
-name = "rtic"
-required-features = ["cortex-m-rtic"]
 
 [[bin]]
 name = "ble_bas_peripheral"
@@ -59,8 +52,4 @@ required-features = ["ble-gatt-server"]
 
 [[bin]]
 name = "flash"
-required-features = []
-
-[[bin]]
-name = "interrupts"
 required-features = []
