--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -26,16 +26,16 @@ ble-gatt-client = ["nrf-softdevice/ble-gatt-client"]
 embassy = { version = "0.1.0", features = ["defmt"]}
 embassy-traits = { version = "0.1.0", features = ["defmt"]}
 embassy-nrf = { version = "0.1.0", features = [ "defmt", "nrf52840" ]}
-cortex-m        = { version = "0.6.4" }
+cortex-m        = { version = "0.7.2" }
 cortex-m-rt = "0.6.13"
 defmt = { version = "0.2.0", features = ["alloc"] }
 nrf-softdevice-defmt-rtt = { path = "../nrf-softdevice-defmt-rtt", version = "0.1.0" }
-panic-probe = "0.1.0"
+panic-probe = { version = "0.2.0", features= ["print-defmt"] }
 nrf-softdevice = { version = "0.1.0", path = "../nrf-softdevice", features = ["defmt", "defmt-trace", "nrf52840", "s140", "ble-peripheral", "ble-central", "critical-section-impl"] }
 nrf-softdevice-s140 = { version = "0.1.1", path = "../nrf-softdevice-s140" }
 futures = { version = "0.3.5", default-features = false }
 fixed = "1.2.0"
-heapless = "0.5.6"
+heapless = "0.7.1"
 alloc-cortex-m = "0.4.0"
 
 [[bin]]
