--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -16,12 +16,12 @@ ble-gatt-server = ["nrf-softdevice/ble-gatt-server"]
 ble-gatt-client = ["nrf-softdevice/ble-gatt-client"]
 
 [dependencies]
-embassy = { version = "0.1.0", features = ["nightly", "defmt"]}
+embassy = { version = "0.1.0", features = ["nightly", "defmt", "defmt-timestamp-uptime"]}
 embassy-nrf = { version = "0.1.0", features = [ "nightly", "defmt", "nrf52840", "gpiote", "time-driver-rtc1" ]}
-cortex-m        = { version = "0.7.2" }
+cortex-m = "0.7.2"
 cortex-m-rt = "0.7.0"
-defmt = { version = "0.3", features = ["alloc"] }
-nrf-softdevice-defmt-rtt = { path = "../nrf-softdevice-defmt-rtt", version = "0.1.0" }
+defmt = "0.3"
+defmt-rtt = "0.3.2"
 panic-probe = { version = "0.3", features= ["print-defmt"] }
 nrf-softdevice = { version = "0.1.0", path = "../nrf-softdevice", features = ["defmt", "nrf52840", "s140", "ble-peripheral", "ble-central", "critical-section-impl"] }
 nrf-softdevice-s140 = { version = "0.1.1", path = "../nrf-softdevice-s140" }
@@ -30,7 +30,7 @@ embedded-storage-async = "0.3.0"
 futures = { version = "0.3.5", default-features = false }
 fixed = "1.2.0"
 heapless = "0.7.1"
-alloc-cortex-m = "0.4.0"
+atomic-pool = "0.2.1"
 
 [[bin]]
 name = "ble_bas_peripheral"
