Allow using cortex-m-rt 0.6 or 0.7

--- a/nrf-softdevice/Cargo.toml
+++ b/nrf-softdevice/Cargo.toml
@@ -43,7 +43,7 @@ critical-section = { version = "0.2.1" }
 num_enum = { version = "0.5.1", default-features = false }
 embassy = { version = "0.1.0" }
 cortex-m = "0.7.2"
-cortex-m-rt = "0.6.13"
+cortex-m-rt = ">=0.6.15,<0.8"
 heapless = "0.7.1"
 fixed = "1.5.0"
 
