--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,7 @@
   "rust-analyzer.checkOnSave.allFeatures": false,
   "rust-analyzer.cargo.target": "thumbv7em-none-eabihf",
   "rust-analyzer.checkOnSave.allTargets": false,
-  "rust-analyzer.cargo.runBuildScripts": true,
-  "rust-analyzer.experimental.procAttrMacros": false,
   "rust-analyzer.procMacro.enable": true,
-  "rust-analyzer.assist.importGranularity": "module",
   "rust-analyzer.linkedProjects": [
     "examples/Cargo.toml"
   ],
@@ -16,4 +13,7 @@
     "**/.git/subtree-cache/**": true,
     "**/target/**": true,
   },
+  "rust-analyzer.imports.granularity.group": "module",
+  "rust-analyzer.cargo.buildScripts.enable": true,
+  "rust-analyzer.procMacro.attributes.enable": false,
 }
