--- a/nrf-softdevice/Cargo.toml
+++ b/nrf-softdevice/Cargo.toml
@@ -41,7 +41,7 @@ log = { version = "0.4.11", optional = true }
 critical-section = { version = "0.2.1" }
 
 num_enum = { version = "0.5.1", default-features = false }
-embassy = { version = "0.1.0" }
+embassy-util = { version = "0.1.0" }
 cortex-m = "0.7.2"
 cortex-m-rt = ">=0.6.15,<0.8"
 heapless = "0.7.1"
