--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,11 @@ exclude = [
 ]
 
 [patch.crates-io]
-embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "53fbd0efb3e77e1e3de948afde2b5bf1a5a9735f" }
-embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "53fbd0efb3e77e1e3de948afde2b5bf1a5a9735f" }
-embassy-util = { git = "https://github.com/embassy-rs/embassy", rev = "53fbd0efb3e77e1e3de948afde2b5bf1a5a9735f" }
-embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "53fbd0efb3e77e1e3de948afde2b5bf1a5a9735f" }
-embassy-macros = { git = "https://github.com/embassy-rs/embassy", rev = "53fbd0efb3e77e1e3de948afde2b5bf1a5a9735f" }
+embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "529535194d4b5d58b31fd6a7541176105e3c63f7" }
+embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "529535194d4b5d58b31fd6a7541176105e3c63f7" }
+embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "529535194d4b5d58b31fd6a7541176105e3c63f7" }
+embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "529535194d4b5d58b31fd6a7541176105e3c63f7" }
+embassy-macros = { git = "https://github.com/embassy-rs/embassy", rev = "529535194d4b5d58b31fd6a7541176105e3c63f7" }
 
 [profile.release]
 codegen-units = 1
