--- a/nrf-softdevice/Cargo.toml
+++ b/nrf-softdevice/Cargo.toml
@@ -42,7 +42,7 @@ critical-section-02 = { package = "critical-section", version = "0.2", optional 
 critical-section-1 = { package = "critical-section", version = "1.0", optional = true }
 
 num_enum = { version = "0.5.1", default-features = false }
-embassy-util = { version = "0.1.0" }
+embassy-sync = { version = "0.1.0" }
 cortex-m = "0.7.2"
 cortex-m-rt = ">=0.6.15,<0.8"
 heapless = "0.7.1"
