--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -18,7 +18,7 @@ ble-gatt-client = ["nrf-softdevice/ble-gatt-client"]
 ble-sec = ["nrf-softdevice/ble-sec"]
 
 [dependencies]
-embassy-executor = { version = "0.1.0", features = ["nightly", "defmt"]}
+embassy-executor = { version = "0.1.0", features = ["nightly", "defmt", "integrated-timers"]}
 embassy-time = { version = "0.1.0", features = ["nightly", "defmt", "defmt-timestamp-uptime"]}
 embassy-sync = { version = "0.1.0" }
 embassy-nrf = { version = "0.1.0", features = [ "nightly", "defmt", "nrf52840", "gpiote", "time-driver-rtc1" ]}
@@ -39,6 +39,10 @@ static_cell = "1.0.0"
 
 [[bin]]
 name = "ble_bas_peripheral"
+required-features = ["ble-gatt-server"]
+
+[[bin]]
+name = "ble_bas_peripheral_notify"
 required-features = ["ble-gatt-server"]
 
 [[bin]]
