--- a/nrf-softdevice/Cargo.toml
+++ b/nrf-softdevice/Cargo.toml
@@ -29,7 +29,7 @@ ble-gatt-server = ["ble-gatt"]
 ble-gatt-client = ["ble-gatt"]
 ble-sec = []
 
-critical-section-impl = ["critical-section-1/restore-state-bool", "critical-section-02/custom-impl"]
+critical-section-impl = ["critical-section/restore-state-bool"]
 
 # Workaround l2cap credit bug. If set, infinite credits are issued
 # to the peer in batches. The `credits` config when establishing the channel is ignored.
@@ -39,8 +39,7 @@ ble-l2cap-credit-wrokaround = []
 [dependencies]
 defmt = { version = "0.3", optional = true }
 log = { version = "0.4.11", optional = true }
-critical-section-02 = { package = "critical-section", version = "0.2", optional = true }
-critical-section-1 = { package = "critical-section", version = "1.0", optional = true }
+critical-section = { version = "1.0", optional = true }
 
 num_enum = { version = "0.5.1", default-features = false }
 embassy-sync = { version = "0.1.0" }
