--- a/nrf-softdevice-gen/Cargo.toml
+++ b/nrf-softdevice-gen/Cargo.toml
@@ -3,6 +3,7 @@ name = "nrf-softdevice-gen"
 version = "0.1.0"
 authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
 edition = "2021"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 bindgen = "0.55.1"
