--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,13 +18,11 @@ exclude = [
 ]
 
 [patch.crates-io]
-embassy-nrf = { git = "https://github.com/embassy-rs/embassy", tag = "embassy-executor-v0.1.1" }
-
-[patch."https://github.com/embassy-rs/embassy"]
-embassy-executor = "0.1.1"
-embassy-macros = "0.1.0"
-embassy-sync = "0.1.0"
-embassy-time = "0.1.0"
+embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "dadd6aafe9d5239b5f9718f446649a1de0d0cbcd" }
+embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "dadd6aafe9d5239b5f9718f446649a1de0d0cbcd" }
+embassy-macros = { git = "https://github.com/embassy-rs/embassy", rev = "dadd6aafe9d5239b5f9718f446649a1de0d0cbcd" }
+embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "dadd6aafe9d5239b5f9718f446649a1de0d0cbcd" }
+embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "dadd6aafe9d5239b5f9718f446649a1de0d0cbcd" }
 
 [profile.release]
 codegen-units = 1
