--- a/rust-toolchain-stable.toml
+++ b/rust-toolchain-stable.toml
@@ -3,11 +3,4 @@
 [toolchain]
 channel = "stable"
 components = [ "rust-src", "rustfmt" ]
-targets = [
-    "thumbv7em-none-eabi",
-    "thumbv7m-none-eabi",
-    "thumbv6m-none-eabi",
-    "thumbv7em-none-eabihf",
-    "thumbv8m.main-none-eabihf",
-    "wasm32-unknown-unknown",
-]
+targets = [ "thumbv7em-none-eabihf" ]
