--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,9 +10,8 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  build-nightly:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
@@ -25,7 +24,19 @@ jobs:
 
       - name: Check fmt
         run: cargo fmt -- --check
-      - name: Build (nightly)
+      - name: Build
         run: ./ci.sh
-      - name: Build (stable)
+
+  build-stable:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-stable-${{ hashFiles('**/Cargo.lock') }}
+      - name: Build
         run: ./ci-stable.sh
