--- a/nrf-softdevice/Cargo.toml
+++ b/nrf-softdevice/Cargo.toml
@@ -51,6 +51,7 @@ critical-section = { version = "1.0", optional = true }
 
 num_enum = { version = "0.6.1", default-features = false }
 embassy-sync = { version = "0.2.0" }
+embassy-futures = { version = "0.1.0" }
 cortex-m = "0.7.2"
 cortex-m-rt = ">=0.6.15,<0.8"
 heapless = "0.7.1"
