--- a/nrf-softdevice-macro/Cargo.toml
+++ b/nrf-softdevice-macro/Cargo.toml
@@ -12,6 +12,8 @@ darling = "0.13.4"
 proc-macro2 = "1.0.18"
 Inflector = "0.11.4"
 uuid = "1.2.2"
+strum = "0.25.0"
+strum_macros = "0.25.2"
 
 [lib]
 proc-macro = true
