--- a/nrf-softdevice/Cargo.toml
+++ b/nrf-softdevice/Cargo.toml
@@ -46,6 +46,9 @@ evt-max-size-512 = []
 
 [dependencies]
 defmt = { version = "0.3", optional = true }
+serde = { version = "1.0", optional = true, default-features = false, features = [
+    "derive",
+] }
 log = { version = "0.4.11", optional = true }
 critical-section = { version = "1.0", optional = true }
 
@@ -60,13 +63,13 @@ futures = { version = "0.3.17", default-features = false }
 embedded-storage = "0.3.0"
 embedded-storage-async = { version = "0.4.0", optional = true }
 
-nrf52805-pac  = { version = "0.12.0", features = ["rt"], optional = true }
-nrf52810-pac  = { version = "0.12.0", features = ["rt"], optional = true }
-nrf52811-pac  = { version = "0.12.0", features = ["rt"], optional = true }
-nrf52820-pac  = { version = "0.12.0", features = ["rt"], optional = true }
-nrf52832-pac  = { version = "0.12.0", features = ["rt"], optional = true }
-nrf52833-pac  = { version = "0.12.0", features = ["rt"], optional = true }
-nrf52840-pac  = { version = "0.12.0", features = ["rt"], optional = true }
+nrf52805-pac = { version = "0.12.0", features = ["rt"], optional = true }
+nrf52810-pac = { version = "0.12.0", features = ["rt"], optional = true }
+nrf52811-pac = { version = "0.12.0", features = ["rt"], optional = true }
+nrf52820-pac = { version = "0.12.0", features = ["rt"], optional = true }
+nrf52832-pac = { version = "0.12.0", features = ["rt"], optional = true }
+nrf52833-pac = { version = "0.12.0", features = ["rt"], optional = true }
+nrf52840-pac = { version = "0.12.0", features = ["rt"], optional = true }
 
 nrf-softdevice-s112 = { version = "0.1.1", path = "../nrf-softdevice-s112", optional = true }
 nrf-softdevice-s113 = { version = "0.1.1", path = "../nrf-softdevice-s113", optional = true }
@@ -78,16 +81,70 @@ nrf-softdevice-macro = { version = "0.1.0", path = "../nrf-softdevice-macro" }
 
 [package.metadata.docs.rs]
 targets = ["thumbv7em-none-eabi"]
-features = ["nrf52840", "s140", "ble-central", "ble-peripheral", "ble-l2cap", "ble-gatt-server", "ble-gatt-client", "ble-rssi", "ble-sec"]
+features = [
+    "nrf52840",
+    "s140",
+    "ble-central",
+    "ble-peripheral",
+    "ble-l2cap",
+    "ble-gatt-server",
+    "ble-gatt-client",
+    "ble-rssi",
+    "ble-sec",
+]
 
 [package.metadata.embassy_docs]
 src_base = "https://github.com/embassy-rs/nrf-softdevice/blob/nrf-softdevice-mbr-v$VERSION/nrf-softdevice-mbr/src/"
 src_base_git = "https://github.com/embassy-rs/nrf-softdevice/blob/$COMMIT/nrf-softdevice-mbr/src/"
 target = "thumbv7em-none-eabi"
 flavors = [
-    { name = "s112", features = ["nrf52832", "s112", "ble-peripheral", "ble-gatt-server", "ble-gatt-client", "ble-rssi", "ble-sec"] },
-    { name = "s113", features = ["nrf52840", "s113", "ble-peripheral", "ble-l2cap", "ble-gatt-server", "ble-gatt-client", "ble-rssi", "ble-sec"] },
-    { name = "s122", features = ["nrf52833", "s122", "ble-central", "ble-gatt-server", "ble-gatt-client", "ble-rssi"] },
-    { name = "s132", features = ["nrf52832", "s132", "ble-central", "ble-peripheral", "ble-l2cap", "ble-gatt-server", "ble-gatt-client", "ble-rssi", "ble-sec"] },
-    { name = "s140", features = ["nrf52840", "s140", "ble-central", "ble-peripheral", "ble-l2cap", "ble-gatt-server", "ble-gatt-client", "ble-rssi", "ble-sec"] },
+    { name = "s112", features = [
+        "nrf52832",
+        "s112",
+        "ble-peripheral",
+        "ble-gatt-server",
+        "ble-gatt-client",
+        "ble-rssi",
+        "ble-sec",
+    ] },
+    { name = "s113", features = [
+        "nrf52840",
+        "s113",
+        "ble-peripheral",
+        "ble-l2cap",
+        "ble-gatt-server",
+        "ble-gatt-client",
+        "ble-rssi",
+        "ble-sec",
+    ] },
+    { name = "s122", features = [
+        "nrf52833",
+        "s122",
+        "ble-central",
+        "ble-gatt-server",
+        "ble-gatt-client",
+        "ble-rssi",
+    ] },
+    { name = "s132", features = [
+        "nrf52832",
+        "s132",
+        "ble-central",
+        "ble-peripheral",
+        "ble-l2cap",
+        "ble-gatt-server",
+        "ble-gatt-client",
+        "ble-rssi",
+        "ble-sec",
+    ] },
+    { name = "s140", features = [
+        "nrf52840",
+        "s140",
+        "ble-central",
+        "ble-peripheral",
+        "ble-l2cap",
+        "ble-gatt-server",
+        "ble-gatt-client",
+        "ble-rssi",
+        "ble-sec",
+    ] },
 ]
