--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,6 +1,6 @@
 # Before upgrading check that everything is available on all tier1 targets here:
 # https://rust-lang.github.io/rustup-components-history
 [toolchain]
-channel = "beta"
+channel = "stable"
 components = ["rust-src", "rustfmt"]
 targets = ["thumbv7em-none-eabihf"]
