--- a/examples/.cargo/config.toml
+++ b/examples/.cargo/config.toml
@@ -1,5 +1,5 @@
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
-runner = "probe-run --chip nRF52840_xxAA"
+runner = "probe-rs run --chip nRF52840_xxAA"
 
 [build]
 # Pick ONE of these compilation targets
