--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -23,6 +23,12 @@ nrf52832 = [
   "nrf-softdevice/s132",
   "dep:nrf-softdevice-s132"
 ]
+nrf52833 = [
+  "embassy-nrf/nrf52833",
+  "nrf-softdevice/nrf52833",
+  "nrf-softdevice/s140",
+  "dep:nrf-softdevice-s140"
+]
 nrf52840 = [
   "embassy-nrf/nrf52840",
   "nrf-softdevice/nrf52840",
